client/one/less/style.less
/* ... */
.little-red-square {
    margin-left: 24px;
    width: 9px;
    height: 9px;
    background-color: #bd0a00;
    display: inline-block;
    margin-top: 12px;
    border-radius: 2px;
}


.input-group {
    .input-group-addon {
        .border-radius(2px 0 0 2px);
        font-weight: lighter;
        font-size: 14px;
        color: #414141;
    }
}

.input-one-char {
    width: 1em !important;
}

.input-mini {
    width: 6em !important;
}

.input-small {
    width: 9em !important;
}

.input-medium {
    width: 15em !important;
}

.input-large {
    width: 18em !important;
}

.alert {
    margin-bottom: 0;
    .border-radius(0);

    &.alert-info {
        background-color: #fffee9;
        border: 1px solid #ede652;
        font-size: 12px;
        font-color: #414141;
    }
}

.popover {
    .border-radius(0);
    .box-shadow(none);
    border: none;
    padding: 0px;
    z-index: 100000;

    &:before {
        content: "";
        display: block;
        height: 2px;
        background-color: #2fa8c7;
        .border-radius(2px 2px 0px 0px);
    }

    .popover-inner {
        background-color: #fff;
        color: #414141;
        font-weight: 300;
        border: 1px solid #d2d2d2;
        border-top: 0px;
        .border-radius(0px 0px 2px 2px);
        .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));
    }

    &.top > .arrow {
        border-top-color: #d2d2d2;
        bottom: -10px;
    }

    &.left > .arrow {
        right: -10px;
    }

    &.right > .arrow {
        left: -10px;
    }
}

div[datepicker] {
    .btn,
    .btn:hover {
        border: 1px solid #fff;
        color: #414141;
        .border-radius(0);
        .box-shadow(none);

        &.active {
            border: 1px solid #2fa8c7;
            background-color: #2fa8c7;
            color: #fff;
        }

        .text-info {
            color: #414141;
            font-weight: 600;
        }
    }
}

.calendar.input-group {
    width: 14em;
    .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));

    i {
        padding: 0;

        img {
            height: 30px;
        }
    }

    .input-group-addon {
        border: 1px solid #2fa8c7;
        border-right: 0;
        background-color: transparent;
    }

    input {
        border: 1px solid #2fa8c7;
        border-left: 0;
        padding-left: 0;
    }
}

.daterangepicker {
    padding-left: 0;
    padding-right: 0;

    &.dropdown-menu {
        border: 1px solid #2fa8c7;
        padding-top: 0;
    }

    &.opensleft {
        .ranges {
            margin-left: 0;
            margin-right: 0;
            margin-top: 0;
        }
    }

    &.opensleft:before {
        content: none;
    }
    &.opensleft:after {
        content: none;
    }

    .ranges {
        width: 240px;

        ul {
            margin-bottom: 8px;
        }

        li {
            background-color: transparent;
            border: 1px solid transparent;
            color: #2fa8c7;
            margin-bottom: 1px;

            &:hover {
                border: 1px solid transparent;
                background-color: #2fa8c7;
                .border-radius(0);
            }

            &.active {
                border: 1px solid transparent;
                background-color: #2fa8c7;
                .border-radius(0);
            }
        }

        .applyBtn {
            margin-left: 12px;
        }
    }

    .daterangepicker_start_input,
    .daterangepicker_end_input {
        display: none;
    }

    .calendar {
        td.active {
            border: 1px solid transparent;
            background-color: #2fa8c7;
            .border-radius(0);
        }
    }

    td,
    th {
        .border-radius(0);
    }

    td.available + td.start-date,
    td.available + td.end-date {
        .border-radius(0);
    }

    .calendar-label {
        font-weight: bold;
    }
}

.breadcrumb {
    display: inline-block;
    background-color: transparent;
    padding: 0px;
    margin: 0px;

    & > li+li:before {
        content: ">";
        font-size: 15px;
        font-weight: normal;
        color: white;
    }

    & > li a,
    & > li span {
        font-size: 15px;
        font-weight: normal;
        color: white;

        &.active {
            font-size: 15px;
            font-weight: normal;
            color: white;
            font-weight: bold;
        }
    }
}

.select2-choice,
.select2-container-active .select2-choice,
.select2-container-active .select2-choices {
    .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));
}

.select2-chosen {
    color: #454545;
}


.graph-infobox-parent {
    display: inline-block;
    width: 100%;
    position: relative;
    overflow: hidden;
}

.graph-container-short {
    display: inline-block;
    width: 70%;
}

.infobox-container-full {
    display: inline-block;
    width: 28%;
    margin-left: 2%;
    position: absolute;
    height: 100%;
    overflow: auto;
    display: visible;
    background: #f6f6f6;
	font-size: 13px;
}

.infobox-container-short {
    display: none;
}

.infobox-button {
    margin-right: 5px;
}

.infobox-background {
    background: #f6f6f6;
}

.infobox-adgroup {
	.infobox-setting-label {
		width: 34%;
		max-width: 120px;
	}
}

.infobox-account {
	.infobox-setting-label {
		width: 30%;
		max-width: 120px;
	}

	.infobox-status {
		vertical-align: top;
		margin-top: 5px;
	}
}

.infobox-campaign {
	.infobox-setting-label {
		width: 30%;
		max-width: 125px;
	}
}

.infobox-all-accounts {
	.infobox-setting-label {
		width: 45%;
		max-width: 185px;
	}

	.infobox-setting-value-container {
		width: 50%;
	}
}

.infobox {
    padding: 10px;

    color: @infobox-black;

    hr {
    	border-top: 1px solid #dddddd;
		margin: 10px -10px;
	}
}

.infobox-active-circle-icon-gray {
    .state-icon-placeholder();
    background-image: url('img/active_circle_icon_gray.svg');
    height: 14px;
    line-height: 34px;
    background-position: center center;
    background-size: 43px auto;
    width: 14px;
}
/* ... */

